--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
   "private": true,
   "scripts": {
-    "commitmsg": "commitlint -E GIT_PARAMS",
     "fmt": "prettier --write '{,!(node_modules),!(coverage)}**/*.js'",
-    "precommit": "lint-staged"
+    "deploy": "serverless deploy"
   },
   "dependencies": {
-    "aws-sdk": "^2.279.1",
+    "aws-sdk": "^2.326.0",
     "date-fns": "^1.29.0",
-    "greenlock": "^2.3.8",
-    "le-challenge-dns": "^2.3.2",
+    "greenlock": "^2.4.2",
+    "le-challenge-route53": "^0.1.3",
+    "le-challenge-standalone": "^2.1.0",
     "once": "^1.4.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.0.0",
-    "@commitlint/config-conventional": "^7.0.1",
-    "eslint": "^5.1.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.13.0",
+    "@commitlint/cli": "^7.1.2",
+    "@commitlint/config-conventional": "^7.1.2",
+    "eslint": "^5.6.1",
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
-    "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.0",
-    "prettier": "^1.13.7",
-    "serverless": "^1.28.0"
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "husky": "^1.1.0",
+    "lint-staged": "^7.3.0",
+    "prettier": "^1.14.3",
+    "serverless": "^1.32.0"
   }
 }
